# snappy-pipeline

./: .ci.condarc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  bandit.yml  environment.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py  sonar-project.properties  tools.ini  versioneer.py
.github/actions/: conda-cache.yml
.github/actions/conda-cache/: action.yml
.github/workflows/: ci-e2e.yml  ci.yml  release-please.yml
.tests/test-workflow/: .gitignore
.tests/test-workflow/config/: config.yaml
.tests/test-workflow/workflow/: Snakefile
docs/: Makefile  cbioportal_export.rst  conf.py  dev_api.rst  dev_intro.rst  dev_ngs_mapping.rst  dev_somatic_variant_calling.rst  history.rst  howto_release.rst  index.rst  installation.rst  license.rst  make.bat  overview.rst  panel_of_normals.rst  quickstart.rst  somatic_cnv.rst  somatic_ngs.rst  somatic_variant_filtration.rst  step_generic.rst  step_intro.rst  usage.rst
docs/step/: adapter_trimming.rst  helper_gcnv_model.rst  helper_gcnv_model_target_seq.rst  helper_gcnv_model_targeted.rst  helper_gcnv_model_wgs.rst  hla_typing.rst  igv_session_generation.rst  mobile_element_insertion.rst  ngs_data_qc.rst  ngs_mapping.rst  ngs_sanity_checking.rst  panel_of_normals.rst  repeat_analysis.rst  roh_calling.rst  somatic_cnv_calling.rst  somatic_gene_fusion_calling.rst  somatic_neoepitope_prediction.rst  somatic_ngs_sanity_checking.rst  somatic_purity_ploidy_estimate.rst  somatic_targeted_seq_cnv_calling.rst  somatic_variant_annotation.rst  somatic_variant_calling.rst  somatic_variant_checking.rst  somatic_variant_expression.rst  somatic_variant_filtration.rst  somatic_wgs_cnv_calling.rst  somatic_wgs_sv_calling.rst  sv_calling_targeted.rst  sv_calling_wgs.rst  targeted_seq_cnv_calling.rst  targeted_seq_mei_calling.rst  tcell_crg_report.rst  variant_annotation.rst  variant_calling.rst  variant_checking.rst  variant_denovo_filtration.rst  variant_filtration.rst  variant_phasing.rst  wgs_cnv_annotation.rst  wgs_cnv_calling.rst  (+4 more)
requirements/: base.txt  dev.txt  drmaa.txt  test.txt
scripts/: cubi-vcf_sort  cubi-vcf_split  snappy-transfer_utils  snappy-vcf_sort  snappy-vcf_split
snappy_pipeline/: __init__.py  _version.py  base.py  chunk.py  find_file.py  guess_genome.py  utils.py  workflow_model.py
snappy_pipeline/apps/: snappy_pull_sheet.py  snappy_refresh_step.py  snappy_slurm_status.py  snappy_snake.py  snappy_start_project.py  snappy_start_step.py
snappy_pipeline/apps/impl/: __init__.py  fsmanip.py  logging.py  yaml_utils.py
snappy_pipeline/apps/tpls/: README.md  jobscript.sh  pipeline_job.sh  project_config.yaml  step_config.yaml
snappy_pipeline/models/: __init__.py  annotation.py  bcftools.py  bcftools_large.py  cnvkit.py  common.py  gatk.py  gcnv.py  library_kit.py  mutect2.py  parallel.py  purecn.py  validators.py
snappy_pipeline/scripts/gcnv/: contig_ploidy.py  preprocess_intervals.py
snappy_pipeline/workflows/abstract/: __init__.py  common.py  exceptions.py  models.py  pedigree.py  warnings.py
snappy_pipeline/workflows/adapter_trimming/: Snakefile  __init__.py  config.schema.yaml  model.py
snappy_pipeline/workflows/any_variant_annotation/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/any_variant_calling/: __init__.py  model.py
snappy_pipeline/workflows/any_variant_filtration/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/cbioportal_export/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/combine_variants/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/common/: __init__.py  delly.py  manta.py  melt.py  samplesheet.py  sv_calling.py
snappy_pipeline/workflows/create_proteome/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/gcnv/: __init__.py  gcnv_build_model.py  gcnv_common.py  gcnv_run.py
snappy_pipeline/workflows/gene_expression_quantification/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/gene_expression_report/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/germline_snvs/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/germline_variant_annotation/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/germline_variant_calling/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/germline_variant_filtration/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/guess_sex/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/helper_gcnv_model/: Snakefile  __init__.py
snappy_pipeline/workflows/helper_gcnv_model_target_seq/: Snakefile  __init__.py
snappy_pipeline/workflows/helper_gcnv_model_targeted/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/helper_gcnv_model_wgs/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/hla_typing/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/homologous_recombination_deficiency/: Snakefile  __init__.py  model.py
snappy_pipeline/workflows/igv_session_generation/: Snakefile  __init__.py  igv_session.xml  model.py
snappy_pipeline/workflows/mobile_element_insertion/: Snakefile  __init__.py
snappy_pipeline/workflows/ngs_data_qc/: Snakefile  (+2 more)
snappy_wrappers/: __init__.py  base.py  genome_regions.py  resource_usage.py  runner_seq.py  simple_wrapper.py  snappy_wrapper.py  sweep.py  utils.py  wrapper_parallel.py
snappy_wrappers/tools/: __init__.py  add_ped_header.sh  bam_cov_stats.py  bed_filter_jaccard.py  chromosome_lengths.py  fix_vcf.py  gcnv_merge_vcfs.py  genome_windows.py  parse_dragen_qc.py  ped_to_vcf_header.py  quickvenn.py  vcf_cnvetti_coverage_to_hom_del_calls.py  vcf_filter_denovo.py  vcf_filter_from_info.py  vcf_filter_to_info.py  vcf_first_header.py  vcf_merge_exome_cnvs.py
snappy_wrappers/wrappers/: conftest.py
tests/snappy_pipeline/: test_base.py  test_chunking.py  test_find_file.py
tests/snappy_wrappers/: conftest.py  test_wrapper_parallel.py
work/: bwa.mutect2.select_panel.txt
(+1028 files in other folders)
